[project]
name = "stock-market-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
